--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -51,6 +51,6 @@ block content
         | chosen us for hosting their media
       .col-sm-4
         h2 #{viewAmount} Views &nbsp
-          i.fa.fa-users
+          i.fa.fa-video
         p The amount of times people have
         | enjoyed the innovative new platform
