--- a/views/media.pug
+++ b/views/media.pug
@@ -57,7 +57,7 @@ block content
             //h2(class="upload-title-value" style="align-content:center;justify-content:normal;width:60%;margin: 0 auto;")=upload.title
             h2.balance-text(class="upload-title-value" style="text-wrap:balance;width:80%;margin:0 auto;")=upload.title
 
-            if upload.visibility == 'pending'
+            if upload.visibility == 'pending' && upload.status !== 'processing'
                 h3.pending-string Your video is currently pending moderator approval. If it's still pending after several minutes please contact a mod at
                     a(href="/discord")  Discord
 
