--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -260,7 +260,7 @@ block content
         label.col-sm-3.control-label(for='channelName') Channel Thumbnail
         .col-sm-7
           // FILE INPUT BUTTON
-          input.center-block.text-center(class="upload-file" data-max-size="500000000" type="file" name="filetoupload" accept="image/*")
+          input.center-block.text-center(class="upload-file" data-max-size="500000000" type="file" name="filetoupload" accept="image/*" style="margin:0;margin-bottom:3px;")
 
       div.form-group
         div.col-sm-3.
