--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -22,5 +22,4 @@ a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.
         img.preview-image(src='/images/no_img.png')
 
     div
-        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:6px;") #{upload.title}
-    br
+        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:4px;margin-bottom:7px;") #{upload.title}
