--- a/views/layout.pug
+++ b/views/layout.pug
@@ -54,7 +54,7 @@ html
     //layout.pug
     include partials/header
 
-    .container-fluid(style="padding-left: 0px; padding-right: 0px;")
+    .container(style="max-width:85%;padding-left: 0px; padding-right: 0px;")
       include partials/flash
       block content
 
