--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -31,8 +31,8 @@ block content
           i.fa.fa-upload
         p The amount of  times users have
         | chosen us for hosting their media
-      div.col-sm-12.col-md-4.p-5
-        h2 #{viewAmount} Views 
+      .col-sm-4
+        h2 #{viewAmount} Views &nbsp
           i.fa.fa-video
         p The amount of times people have
         | enjoyed the innovative new platform
