bugfix b2 uploads when compressing

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -79,6 +79,8 @@
                 li
                   a(href=`/admin/oneOffSocialPost`) One Off Social Post
 
+        //li(class=(title == 'Features') ? 'active' : undefined)
+        //  a(href=`/features`) Features
         li(class=(title == 'About') ? 'active' : undefined)
           a(href=`/about`) About
 
