--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -11,22 +11,23 @@ block content
                         margin-left:5px
                 }
 
-        div(style="padding-top:75px;max-width:629px;margin:0 auto;")
+        .container
+                div(style="padding-top:75px;max-width:629px;margin:0 auto;")
 
-                h3 NodeTube was created to allow anyone with basic technical skills to run their own media hosting platform
-                br
-                h3 Please check out the GitHub repo for more information
-                        a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube").
-                                  here
+                        h3 NodeTube was created to allow anyone with basic technical skills to run their own media hosting platform
+                        br
+                        h3 Please check out the GitHub repo for more information
+                                a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube").
+                                          here
 
-                br
-                h3
-                        | Join us for collaboration on
-                        a.left(href='https://discord.gg/ejGah8H') Discord
-                        | ,
-                        a.left(href='https://riot.im/app/#/room/#nodetube:matrix.org') Riot.im (Matrix)
-                        |  and
-                        a.left(href='https://reddit.com/r/nodetube') Reddit
+                        br
+                        h3
+                                | Join us for collaboration on
+                                a.left(href='https://discord.gg/ejGah8H') Discord
+                                | ,
+                                a.left(href='https://riot.im/app/#/room/#nodetube:matrix.org') Riot.im (Matrix)
+                                |  and
+                                a.left(href='https://reddit.com/r/nodetube') Reddit
 
 
 
