--- a/views/upload.pug
+++ b/views/upload.pug
@@ -88,7 +88,7 @@ block content
                   br
 
                   label(for='title') Title (*)
-                  input.form-group.center-block.text-center(style="width:400px;" type="text" name="title" id="title" minlength=3, maxlength=100 required)
+                  input.form-group.center-block.text-center(style="width:400px;max-width:95%" type="text" name="title" id="title" minlength=3, maxlength=100 required)
                   br
 
                   // add endpoint for visibility
@@ -167,7 +167,7 @@ block content
                   br
                   label(for="description") Description
                   br
-                  textarea.form-group(style="width:400px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
+                  textarea.form-group(style="width:400px;max-width:95%" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
 
                   //br
                   //label.control-label(for='filetoupload' style="") Channel Thumbnail
