--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -2,9 +2,7 @@ extends ../layout
 
 block content
 
-  script(src='https://checkout.stripe.com/checkout.js')
-
-
+  //script(src='https://checkout.stripe.com/checkout.js')
 
   style.
     .stripe-button-el span {
@@ -106,260 +104,262 @@ block content
 
 
 
-  div.row
-    div.col-sm-2
-      h4
-        a(href=`/user/${user.channelUrl}`) Channel Page
-    div.col-sm-2
-      h4
-        a(href="/account/viewHistory") View History
-    div.col-sm-2
-      h4
-        a(href="/account/reactHistory") React History
-    //div.col-sm-2
-    //      h4
-    //        a(href="/" + `${user.channelUrl}` +  "/playlists") Playlists
-    div.col-sm-2
-      h4
-        a(href="/account/livestreaming") Livestreaming
-        //a.livestream-button Livestreaming
-        //a.livestreaming-link(href=`/user/${user.channelUrl}/live/staging`) Livestreaming
-    div.col-sm-2
-      h4 Credit ($#{user.credit/100})
-    div.col-sm-2
-      h4 Earnings ($#{user.receivedCredit / 100})
-    //div.col-sm-2
-    //  h3
-    //    a(href=`/account/creditHistory`) Credit History
+  .container
+    div.row
+      div.col-sm-2
+        h4
+          a(href=`/user/${user.channelUrl}`) Channel Page
+      div.col-sm-2
+        h4
+          a(href="/account/viewHistory") View History
+      div.col-sm-2
+        h4
+          a(href="/account/reactHistory") React History
+      //div.col-sm-2
+      //      h4
+      //        a(href="/" + `${user.channelUrl}` +  "/playlists") Playlists
+      div.col-sm-2
+        h4
+          a(href="/account/livestreaming") Livestreaming
+          //a.livestream-button Livestreaming
+          //a.livestreaming-link(href=`/user/${user.channelUrl}/live/staging`) Livestreaming
+      div.col-sm-2
+        h4 Credit ($#{user.credit/100})
+      div.col-sm-2
+        h4 Earnings ($#{user.receivedCredit / 100})
+      //div.col-sm-2
+      //  h3
+      //    a(href=`/account/creditHistory`) Credit History
 
-  p
-  hr
+    p
+    hr
 
 
-  h2.text-center Channel Overview
-  hr
+    h2.text-center Channel Overview
+    hr
 
-  // TODO: export a variable plus_enabled if user enables payments
-  if plus_enabled
-    h3.text-center(style="margin-bottom:16px") NodeTube Plus
-    div.pt-plus.center-div.text-center
-      if user.plan == 'plus'
-        p Thank you so much for subscribing!
-        p This area is currently being expanded
-        p In the meantime enjoy your new features:
-        h4 Automatic YouTube backup functionality, unlisted uploads, private uploads, 2GB upload size
+    // TODO: export a variable plus_enabled if user enables payments
+    if plus_enabled
+      h3.text-center(style="margin-bottom:16px") NodeTube Plus
+      div.pt-plus.center-div.text-center
+        if user.plan == 'plus'
+          p Thank you so much for subscribing!
+          p This area is currently being expanded
+          p In the meantime enjoy your new features:
+          h4 Automatic YouTube backup functionality, unlisted uploads, private uploads, 2GB upload size
+        else
+          p(style="white-space:pre-line;margin-bottom:19px;").
+            - Upload file-size limit raised to 2GB
+
+            - Unlisted, private and scheduled uploads
+
+            - Livestream video, audio or screensharing
+
+            - Built in monetization via direct payments (COMING SOON)
+
+            - Access to NodeTube Recording Studio (COMING SOON)
+
+            - One-click complete YouTube backup (including future uploads)
+
+            - Early access to all beta features
+
+            - $4.95/month, cancel at any time
+
+          button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
+            span(style="display: block; min-height: 30px;") Buy Now
+
+        br
+        br
+
+
+
+    if user.plan == 'plus' || user.youtubeChannelId
+      h3.ytBackup
+        br
+        br
+        br
+        h3.text-center YouTube Backup
+        br
+
+        //form
+        //  .form-group
+        //    .col-sm-offset-3.col-sm-7
+        //      a.btn.btn-block.btn-google.btn-social(href='/auth/youtube')
+        //        i.fa.fa-youtube
+        //        | Sign in with YouTube
+        //
+        //br
+        //br
+
+      if !user.youtubeChannelId
+        form.form-horizontal
+          .form-group
+            label.col-sm-3.control-label(for='youtubeChannelId') YouTube Username Or Channel ID
+            .col-sm-7
+              input.form-control(type='youtubeChannelId', name='youtubeChannelId', id='youtubeChannelId')
+          .form-group
+            .col-sm-offset-3.col-sm-4
+              button.btn.btn-primary.saveChannelId(type='submit')
+                i.fa.fa-pencil
+                | Save Channel Username
+
+
+          br
+          div.form-group.disabled
+            label.col-sm-3.control-label(for='youtubeChannelId') Status
+            .col-sm-7.disabled
+              input.disable(type='checkbox', disabled='', data-toggle='toggle')
+
       else
-        p(style="white-space:pre-line;margin-bottom:19px;").
-          - Upload file-size limit raised to 2GB
+        div(style="text-align:center")
+          label.control-label(for='updateStatus') YouTube Channel Id
+          h5 #{user.youtubeChannelId}
+          br
 
-          - Unlisted, private and scheduled uploads
+          label.control-label(for='updateStatus') Status
+          br
+          if user.userSettings.backupOn == false
+            input(id="toggle-event" type='checkbox', data-toggle='toggle')
+          else if user.userSettings.backupOn == true
+            input(id="toggle-event" type='checkbox', checked='', data-toggle='toggle')
+          div(id="console-event")
 
-          - Livestream video, audio or screensharing
+    br
 
-          - Built in monetization via direct payments (COMING SOON)
-
-          - Access to NodeTube Recording Studio (COMING SOON)
-
-          - One-click complete YouTube backup (including future uploads)
-
-          - Early access to all beta features
-
-          - $4.95/month, cancel at any time
-
-        button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
-          span(style="display: block; min-height: 30px;") Buy Now
-
+    h3.text-center Channel Information
       br
       br
+      if !user.channelUrl
+        div.text-center
+          h4 Upgrade! Create a new account and you can select a custom username!
 
 
 
-  if user.plan == 'plus' || user.youtubeChannelId
-    h3.ytBackup
-      br
-      br
-      br
-      h3.text-center YouTube Backup
-      br
+    //form.upload-form(role="form" method="POST" enctype="multipart/form-data")
+    form.update-user-details-form.form-horizontal(role="form" method="POST" enctype="multipart/form-data" action=`${thumbnailServer}/account/profile`)
+      input(type="hidden" name="uploadToken" value=`${user.uploadToken}`)
+      .form-group
+        label.col-sm-3.control-label(for='channelName') Channel Username
+        .col-sm-7
+          h4= user.channelUrl
 
-      //form
-      //  .form-group
-      //    .col-sm-offset-3.col-sm-7
-      //      a.btn.btn-block.btn-google.btn-social(href='/auth/youtube')
-      //        i.fa.fa-youtube
-      //        | Sign in with YouTube
-      //
-      //br
-      //br
+      .form-group
+        label.col-sm-3.control-label(for='channelName') Channel Display Name
+        .col-sm-7
+          input.form-control(type='text', name='channelName', id='channelName', minlength=3, maxlength=25, value=user.channelName)
 
-    if !user.youtubeChannelId
-      form.form-horizontal
+      .form-group
+        label.col-sm-3.control-label(for='channelName') Channel Description
+        .col-sm-7
+          textarea(id="description" name="description" maxlength='500' rows="7" cols="70" style="max-width:100%") #{user.channelDescription}
+
+      // UPLOAD FORM IF NO THUMBNAIL
+      if !user.thumbnailUrl
         .form-group
-          label.col-sm-3.control-label(for='youtubeChannelId') YouTube Username Or Channel ID
+          label.col-sm-3.control-label(for='channelName') Channel Thumbnail
           .col-sm-7
-            input.form-control(type='youtubeChannelId', name='youtubeChannelId', id='youtubeChannelId')
-        .form-group
-          .col-sm-offset-3.col-sm-4
-            button.btn.btn-primary.saveChannelId(type='submit')
-              i.fa.fa-pencil
-              | Save Channel Username
+            // FILE INPUT BUTTON
+            input.center-block.text-center(class="upload-file" data-max-size="500000000" type="file" name="filetoupload" accept="image/*" style="margin:0;margin-bottom:3px;border:0px;")
 
+        div.form-group
+          div.col-sm-3.
+          p.col-sm-7(style="white-space:pre-line;margin-top:-15px;margin-bottom:-1px;").
+            Thumbnail dimensions:
+            width: up to 302px,
+            height: 168px
 
-        br
-        div.form-group.disabled
-          label.col-sm-3.control-label(for='youtubeChannelId') Status
-          .col-sm-7.disabled
-            input.disable(type='checkbox', disabled='', data-toggle='toggle')
-
-    else
-      div(style="text-align:center")
-        label.control-label(for='updateStatus') YouTube Channel Id
-        h5 #{user.youtubeChannelId}
-        br
-
-        label.control-label(for='updateStatus') Status
-        br
-        if user.userSettings.backupOn == false
-          input(id="toggle-event" type='checkbox', data-toggle='toggle')
-        else if user.userSettings.backupOn == true
-          input(id="toggle-event" type='checkbox', checked='', data-toggle='toggle')
-        div(id="console-event")
-
-  br
-
-  h3.text-center Channel Information
-    br
-    br
-    if !user.channelUrl
-      div.text-center
-        h4 Upgrade! Create a new account and you can select a custom username!
-
-
-
-  //form.upload-form(role="form" method="POST" enctype="multipart/form-data")
-  form.update-user-details-form.form-horizontal(role="form" method="POST" enctype="multipart/form-data" action=`${thumbnailServer}/account/profile`)
-    input(type="hidden" name="uploadToken" value=`${user.uploadToken}`)
-    .form-group
-      label.col-sm-3.control-label(for='channelName') Channel Username
-      .col-sm-7
-        h4= user.channelUrl
-
-    .form-group
-      label.col-sm-3.control-label(for='channelName') Channel Display Name
-      .col-sm-7
-        input.form-control(type='text', name='channelName', id='channelName', minlength=3, maxlength=25, value=user.channelName)
-
-    .form-group
-      label.col-sm-3.control-label(for='channelName') Channel Description
-      .col-sm-7
-        textarea(id="description" name="description" maxlength='500' rows="7" cols="70") #{user.channelDescription}
-
-    // UPLOAD FORM IF NO THUMBNAIL
-    if !user.thumbnailUrl
       .form-group
-        label.col-sm-3.control-label(for='channelName') Channel Thumbnail
-        .col-sm-7
-          // FILE INPUT BUTTON
-          input.center-block.text-center(class="upload-file" data-max-size="500000000" type="file" name="filetoupload" accept="image/*" style="margin:0;margin-bottom:3px;border:0px;")
-
-      div.form-group
-        div.col-sm-3.
-        p.col-sm-7(style="white-space:pre-line;margin-top:-15px;margin-bottom:-1px;").
-          Thumbnail dimensions:
-          width: up to 302px,
-          height: 168px
-
-    .form-group
-      .col-sm-offset-3.col-sm-4
-        button.btn.btn.btn-primary(type='submit')
-          i.fa.fa-pencil
-          | Update Profile
+        .col-sm-offset-3.col-sm-4
+          button.btn.btn.btn-primary(type='submit')
+            i.fa.fa-pencil
+            | Update Profile
 
 
-  // DISPLAY THUMBNAIL IF IT EXISTS
+    // DISPLAY THUMBNAIL IF IT EXISTS
 
-  if user.thumbnailUrl || user.customThumbnail
-    br
-    br
-    div.col-sm-12(style="margin-bottom:100px")
-
-      h3.text-center Channel Thumbnail
+    if user.thumbnailUrl || user.customThumbnail
       br
-      // TODO: Sub out thumbnail here
+      br
+      div.col-sm-12(style="margin-bottom:100px")
 
-      if user.customThumbnail
-        img.center-block.text-center(src=`${uploadServer}/${user.channelUrl}/${user.customThumbnail}` width="256px" height="168px")
-      else
-        img.center-block.text-center(src=`${uploadServer}/${user._id}/unique.png` width="256px" height="168px")
+        h3.text-center Channel Thumbnail
+        br
+        // TODO: Sub out thumbnail here
+
+        if user.customThumbnail
+          img.center-block.text-center(src=`${uploadServer}/${user.channelUrl}/${user.customThumbnail}` width="256px" height="168px")
+        else
+          img.center-block.text-center(src=`${uploadServer}/${user._id}/unique.png` width="256px" height="168px")
 
 
-      form.delete-user-thumbnail-form(action=`${thumbnailServer}/api/channel/thumbnail/delete` method="POST")
+        form.delete-user-thumbnail-form(action=`${thumbnailServer}/api/channel/thumbnail/delete` method="POST")
+          input(type='hidden', name='_csrf', value=_csrf)
+          input(type="hidden" name="channelUrl" value=`${user.channelUrl}`)
+          input(type="hidden" name="uploadToken" value=`${user.uploadToken}`)
+
+          button.btn.btn.btn-danger.center-block.text-center(type='submit' style="margin-top:20px")
+            i.fa.fa-pencil
+            | Delete
+
+    if user.email && user.emailConfirmed
+      h3.text-center Confirmed Email
+        br
+      form.form-horizontal(action='/account/email', method='POST')
         input(type='hidden', name='_csrf', value=_csrf)
-        input(type="hidden" name="channelUrl" value=`${user.channelUrl}`)
-        input(type="hidden" name="uploadToken" value=`${user.uploadToken}`)
+        .form-group
+          label.col-sm-3.control-label(for='email') Email Address
+          .col-sm-7
+            h5 #{user.email}
 
-        button.btn.btn.btn-danger.center-block.text-center(type='submit' style="margin-top:20px")
-          i.fa.fa-pencil
-          | Delete
+    // Turning off for the time being, it should be conditional based on a flag
+    //if user.email && !user.emailConfirmed
+    //  h3.text-center Save Email
+    //    br
+    //  form.form-horizontal(action='/account/email', method='POST')
+    //    input(type='hidden', name='_csrf', value=_csrf)
+    //    .form-group
+    //      label.col-sm-3.control-label(for='email') Email Address
+    //      .col-sm-7
+    //        input.form-control(type='email', name='email', id='email' value=`${user.email}`)
+    //    .form-group
+    //      .col-sm-offset-3.col-sm-4
+    //        button.btn.btn-primary(type='submit')
+    //          i.fa.fa-envelope
+    //          | Resend Confirmation Email
 
-  if user.email && user.emailConfirmed
-    h3.text-center Confirmed Email
-      br
-    form.form-horizontal(action='/account/email', method='POST')
+    //if !user.email
+    //  h3.text-center Save Email
+    //    br
+    //  form.form-horizontal(action='/account/email', method='POST')
+    //    input(type='hidden', name='_csrf', value=_csrf)
+    //    .form-group
+    //      label.col-sm-3.control-label(for='email') Email Address
+    //      .col-sm-7
+    //        input.form-control(type='email', name='email', id='email')
+    //    .form-group
+    //      .col-sm-offset-3.col-sm-4
+    //        button.btn.btn-primary(type='submit')
+    //          i.fa.fa-envelope
+    //          | Send Confirmation Email
+    br
+    h3.text-center Change Password
+    br
+
+    form.form-horizontal(action='/account/password', method='POST')
       input(type='hidden', name='_csrf', value=_csrf)
       .form-group
-        label.col-sm-3.control-label(for='email') Email Address
+        label.col-sm-3.control-label(for='password') New Password
         .col-sm-7
-          h5 #{user.email}
-
-  if user.email && !user.emailConfirmed
-    h3.text-center Save Email
-      br
-    form.form-horizontal(action='/account/email', method='POST')
-      input(type='hidden', name='_csrf', value=_csrf)
+          input.form-control(type='password', name='password', id='password')
       .form-group
-        label.col-sm-3.control-label(for='email') Email Address
+        label.col-sm-3.control-label(for='confirmPassword') Confirm Password
         .col-sm-7
-          input.form-control(type='email', name='email', id='email' value=`${user.email}`)
+          input.form-control(type='password', name='confirmPassword', id='confirmPassword')
       .form-group
         .col-sm-offset-3.col-sm-4
           button.btn.btn-primary(type='submit')
-            i.fa.fa-envelope
-            | Resend Confirmation Email
-
-  if !user.email
-    h3.text-center Save Email
-      br
-    form.form-horizontal(action='/account/email', method='POST')
-      input(type='hidden', name='_csrf', value=_csrf)
-      .form-group
-        label.col-sm-3.control-label(for='email') Email Address
-        .col-sm-7
-          input.form-control(type='email', name='email', id='email')
-      .form-group
-        .col-sm-offset-3.col-sm-4
-          button.btn.btn-primary(type='submit')
-            i.fa.fa-envelope
-            | Send Confirmation Email
-  br
-  h3.text-center Change Password
-  br
-
-  form.form-horizontal(action='/account/password', method='POST')
-    input(type='hidden', name='_csrf', value=_csrf)
-    .form-group
-      label.col-sm-3.control-label(for='password') New Password
-      .col-sm-7
-        input.form-control(type='password', name='password', id='password')
-    .form-group
-      label.col-sm-3.control-label(for='confirmPassword') Confirm Password
-      .col-sm-7
-        input.form-control(type='password', name='confirmPassword', id='confirmPassword')
-    .form-group
-      .col-sm-offset-3.col-sm-4
-        button.btn.btn-primary(type='submit')
-          i.fa.fa-lock
-          | Change Password
+            i.fa.fa-lock
+            | Change Password
 
   script.
 
