--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -4,6 +4,7 @@ block content
     div.container
         include ../viewPartials/popularUploadsNavbar
 
+    // show view amount and time period like: Last Day (294)
     h1.center-block.text-center #{englishString} (#{viewAmountInPeriod})
 
     div.container
@@ -16,6 +17,8 @@ block content
             br
 
             //br
+
+            // Non-video stuff (orderBy, sensitivity dropdowns,
 
             if category
                 include ../viewPartials/categoryDropdown
