--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -19,7 +19,9 @@ block content
           button.col-sm-3.btn.btn-primary(type='submit')
             i.fa.fa-user
             | Login
-          a.btn.btn-link(href='/forgot') Forgot your password?
+
+          // turn off forgot password, should expose it as an env var
+          //a.btn.btn-link(href='/forgot') Forgot your password?
       .form-group
         .col-sm-12
           hr
