--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -19,7 +19,7 @@ block content
             margin: 10px auto
         }
 
-        .dropdown-menu {
+        .order-by-dropdown-menu {
             width: 200px;
             left: 50%;
             margin-left: -100px;
@@ -132,7 +132,7 @@ block content
                 | Order By: #{orderByEnglishString} &nbsp
                 span.caret
 
-            ul.order-by-dropdown-menu.order-by-dropdown
+            ul.dropdown-menu.dropdown
                 li
                     a(href=`/user/${channel.channelUrl}?orderBy=popular`) Popular
                 li
