--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -2,7 +2,7 @@ style.
     .preview-image {
         width: inherit;
         max-width:324px;
-        height:inherit;
+        height:200px;
         max-height:200px;
     }
 
