--- a/views/viewPartials/mouseOverJavascript.pug
+++ b/views/viewPartials/mouseOverJavascript.pug
@@ -1,19 +1,17 @@
 script.
   $(document).on({
     mouseenter: function () {
-      var width = $(this).width()
-      var height = $(this).height()
+      $(this).css('filter', 'brightness(1.2)')
 
-
-      $(this).css("width", width * 1.10);
-      $(this).css("height", height * 1.10);
+      //$(this).css("width", width * 1.10);
+      //$(this).css("height", height * 1.10);
 
     },
     mouseleave: function () {
-      var width = $(this).width()
-      var height = $(this).height()
+      $(this).css('filter', 'brightness(1)')
 
-      $(this).css("width", width / 1.10);
-      $(this).css("height", height / 1.10);
+
+      //$(this).css("width", width / 1.10);
+      //$(this).css("height", height / 1.10);
     }
   }, '.preview-image');
